[tool.poetry]
name = "haybox"
version = "0.1.4"
description = "HayBox firmware config protocol Python library"
authors = ["Jonathan Haylett <jonathan@haylett.dev>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "haybox", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
pyserial = "^3.5"
cobs = "^1.2.1"
protobuf = "^5.26.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.63.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
